src/objects/URLsWebServices__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>La Url&apos;s para los llamados a los diferentes WS de Bancomer para conectarse con Clipert.</description>
    <fields>
        <fullName>AuthPassword__c</fullName>
        <description>Contraseña utilizada -como medio de autenticación- para consumir el servicio.</description>
        <label>Contraseña</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthUser__c</fullName>
        <description>Campo donde se almacena el nombre de usuario como medio de autenticación.</description>
        <label>Usuario</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <label>Token</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Url__c</fullName>
        <description>Aqui va la URL para conectarse al WS de Clipert</description>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>URL&apos;s Web Services</label>
</CustomObject>